--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cloudinary": "^2.7.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-easy-crop": "^5.5.6",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.8.2"
   },
